Cleaned up HLSClient

--- a/screen-cast/Sources/HLSClient/Resources/index.html
+++ b/screen-cast/Sources/HLSClient/Resources/index.html
@@ -10,7 +10,7 @@
       <h1>HLS Stream Server</h1>
     </header>
     <div>
-      <video width="360" height="640" src="index.m3u8" preload="none" onclick="this.play()" controls />
+      <video width="1125" height="2436" src="playlist.m3u8" preload="none" onclick="this.play()" controls />
     </div>
   </body>
 </html>
